* Remove snmp_clearsession. It is replaced by clearsession which supports both snmp and telnet
  methods of removing a user from an access server. Add corresponding configuration directives
  general_sessionclear_method and nasXX_sessionclear_method
* Create a new function da_sql_limit() and use that to pass LIMIT arguments to the database layer
  since the syntax is different between db vendors
Ver 1.78:
* Add a snmp_clearsession which can disconnect a user by using the Cisco AAA Session MIB
* Add a configuration directive general_sessionclear_bin
* Add a session disconnect button in the 'clear open sessions' page
* Also clear sessions from the sql extra servers in the 'clear open sessions' page
* In bin/snmpfinger also accept @,. in the username
* If we are stripping realms, then if needed strip them from the data returned by snmpfinger in
  user_finger.php3
* Add a header with the page encoding before sending any page (header added in config.php3)
  This closes Bug #153
* Fix a problem when reading username.mappings
* If date calculation fails, abort
* Add a backup_radacct script
* Add an sqlrelay functions file. The user_admin page does not currently work. Looking into it.
* Add sqlrelay support in the scripts. Add a sqlrelay_query script to run sqlrelay commands
* Update password_check to work with all password attributes and use the configuration directives
* Add more documentation for per user counter limit attributes (daily/weekly/monthly limits)
* Make all counter limits default to none so that people don't get confused
* In clear_opensessions depending on sql type use either IS NULL or = 0 in the DELETE statement.
  We need to find a cleaner solution to this. This closes bug#175
* Log somewhat more verbose error messages when the sql_command binary is not found in the bin scripts
* Make nasXX_finger_type actually work since the place where nas information was stored was changed a
  long time ago. Bug noted by Nick Bright